# kators

./: .dockerignore  .gitignore  Cargo.toml  Cross.toml  Dockerfile  readme.md  windows-build.sh
.github/workflows/: rust.yml
gtk/: install.sh  orbtk.sh
src/: main.rs  view.qml  view.rs
src/d_gui/: mod.rs  model.rs  server_info.rs  topic_info.rs  tree.rs
src/fltk_gui/: mod.rs
src/ice/: mod.rs  panel.rs  server_pane.rs
src/kafka/: admin_ops.rs  consumer_ops.rs  kafka_ops.rs  mod.rs  producer_ops.rs
