[package]
name = "kators"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
# Errors
anyhow = "*"
thiserror = "*"
# Configuration
sled = { version = "*", features = ["compression"] }
# GUI
eframe = "*"
# Kafka
rdkafka = { version = "*", features = ["ssl"] }
# Serialize/deserialize
serde = { version = "*", features = ["derive"] }
serde_derive = "*"
bson = "*"
# Crypting
openssl = { version = "*", features = ["vendored"]}
# Async
tokio = "*"
# Logging
log = "*"
env_logger = "*"
tracing-subscriber = "*"
# dirs
dirs = "*"
futures = "*"