[package]
name = "kators"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
# Errors
anyhow = "1.0"
thiserror = "1.0"
# Configuration
sled = { version = "0", features = ["compression"] }
# GUI
#eframe = "*"
fltk = { version = "^1.3", features = ["fltk-bundled"] }
# Kafka
rdkafka = { version = "0", features = ["ssl-vendored", "cmake-build"] }
# Serialize/deserialize
serde = { version = "1", features = ["derive"] }
serde_derive = "1"
bson = "2"
# Crypting
openssl = { version = "0", features = ["vendored"]}
# Async
tokio = "1"
# Logging
log = "0"
env_logger = "0"
tracing-subscriber = "0"
# dirs
dirs = "4"
futures = "0"

[build-dependencies]
fl2rust = "0.4"
